tests/src/frontend/typechecking/invalid/frozen_lambda_4.sk
mutable class Foo(f: () -> void)
fun no(): void {
  _ = Foo(() -> void)
}
